<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="@color/backgroundNav"

    >

    <ImageView
        android:id="@+id/background_page_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_page"
        android:scaleType="fitXY" />




    <ImageView
        android:id="@+id/img_high_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_m_large"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_page_num"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/spacing_m_large"
        android:text="12"
        android:background="@color/primary_color"
        android:textColor="@color/white"
        style="@style/Title_text_Login_Interface"
        android:layout_marginStart="@dimen/spacing_m_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/spacing_x_small"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintBottom_toTopOf="@+id/main_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_high_margin">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layoutDirection="rtl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/main_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/background_nav"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/spacing_large">

            <TextView
                android:id="@+id/txt_enter_the_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_word"
                android:layout_marginEnd="@dimen/spacing_middle"
                android:layout_gravity="center_vertical"
                style="@style/style_text_Define_him"
                android:textColor="@color/primary_color"
                android:padding="@dimen/_5sdp"
                android:visibility="gone"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>


            <TextView
                android:id="@+id/btn_repet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repet"
                android:background="@drawable/background_rounded"
                android:backgroundTint="@color/primary_color"
                android:layout_marginEnd="@dimen/spacing_middle"
                android:layout_gravity="center_vertical"
                style="@style/style_text_Define_him"
                android:textColor="@color/backgroundColor"
                android:padding="@dimen/_5sdp"
                />


            <TextView
                android:id="@+id/btn_read_all_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reading_page"
                android:background="@drawable/background_rounded"
                android:backgroundTint="@color/primary_color"
                android:layout_gravity="center_vertical"
                style="@style/style_text_Define_him"
                android:textColor="@color/backgroundColor"
                android:padding="@dimen/_5sdp"
                />




        </LinearLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>