<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.StartFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/background_start_fragment"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/img_home_shape_top"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/yallow" />

            <ImageView
                android:id="@+id/title_group_book"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:scaleType="centerInside"
                app:tint="@color/primary_color"
                app:layout_constraintBottom_toBottomOf="@+id/img_home_shape_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/logo_app"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_85sdp"
                android:layout_marginHorizontal="@dimen/spacing_m_large"
                android:layout_marginTop="@dimen/_25sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_home_shape_top" />


            <LinearLayout
                android:id="@+id/LinearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/spacing_m_large"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/logo_app"
                app:layout_constraintStart_toStartOf="@+id/logo_app"
                app:layout_constraintTop_toBottomOf="@+id/logo_app">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginBottom="@dimen/spacing_m_large">

                    <ImageView
                        android:id="@+id/background_buttons_start_fragment_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        style="@style/Title_text_Login_Interface"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Contents"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginBottom="@dimen/spacing_m_large">

                    <ImageView
                        android:id="@+id/background_buttons_start_fragment_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        style="@style/Title_text_Login_Interface"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/this_book"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginBottom="@dimen/spacing_m_large">

                    <ImageView
                        android:id="@+id/background_buttons_start_fragment_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        style="@style/Title_text_Login_Interface"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Authors"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginBottom="@dimen/spacing_m_large">

                    <ImageView
                        android:id="@+id/background_buttons_start_fragment_4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        style="@style/Title_text_Login_Interface"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_group"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginBottom="@dimen/spacing_m_large">

                    <ImageView
                        android:id="@+id/background_buttons_start_fragment_5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        style="@style/Title_text_Login_Interface"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Our_services"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        style="@style/Title_text_Login_Interface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="V1.0.0"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_7ssp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
