<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="rtl"
    tools:context=".features.OurServicesFragment">

    <ImageView
        android:id="@+id/img_background_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_xxx_large"
        android:layoutDirection="ltr"
        android:background="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ButtonBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/spacing_m_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorAccent">

        </ImageView>

        <TextView
            style="@style/Title_text_ToolBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Contents"
            android:textSize="@dimen/_18ssp"
            android:layout_marginEnd="@dimen/spacing_large"
            app:layout_constraintBottom_toBottomOf="@+id/ButtonBack"
            app:layout_constraintEnd_toStartOf="@+id/ButtonBack"
            app:layout_constraintTop_toTopOf="@+id/ButtonBack">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <FrameLayout
    android:id="@+id/space_1"
    android:layout_width="match_parent"
    android:layout_height="@dimen/spacing_medium"
    android:background="@color/colorAccent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/space_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space_1"
        />

    <FrameLayout
        android:id="@+id/space_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_medium"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>


    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="@+id/img_background_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Go_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_x_large"
            android:layout_gravity="center_vertical"

            >

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/background_num"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/titleContain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:fontFamily="@font/yakout_linotype_light_bold_1"
                    android:gravity="center"
                    android:padding="@dimen/spacing_medium"
                    android:text="@string/enter_number_page"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <EditText
                    android:id="@+id/edite_number_page_content"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/background_num"
                    android:fontFamily="@font/yakout_linotype_light_bold_1"
                    android:textSize="@dimen/_15ssp"
                    android:gravity="center"
                    android:hint="4"
                    android:imeOptions="actionGo"
                    android:inputType="number"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/yakout_linotype_light_bold_1"
                    android:gravity="center"
                    android:padding="@dimen/spacing_medium"
                    android:text="@string/from"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/yakout_linotype_light_bold_1"
                    android:gravity="center"
                    android:padding="@dimen/spacing_medium"
                    android:text="54"
                    android:textSize="@dimen/_15ssp"
                    style="style_text_Define_him"
                    android:layout_marginEnd="@dimen/spacing_x_medium"
                    android:textColor="@color/colorAccent"
                    />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
